<resources>
	<string name="app_name">Delivery</string>
	<string name="action_settings">Налаштування</string>

	<string name="msg_invalid_user">Корстувач з таким логіном відсутній</string>
	<string name="msg_invalid_password">Неправильно введений пароль</string>
	<string name="msg_password_mandatory">Пароль вказувати обов\'язково</string>

	<string name="auth_dialog">Авторизація</string>
	<string name="auth_dialog_ok">Вхід</string>
	<string name="auth_dialog_cancel">Відміна</string>
	<string name="username">Користувач</string>
	<string name="password">Пароль</string>

	<string name="FragmentClients">Клієнти</string>
	<string name="FragmentOrders">Замовлення</string>
	<string name="FragmentFuel">Пальне</string>
	<string name="FragmentStatistics">Статистика</string>
	<string name="FragmentUserAdmin">Адміністрування</string>

	<string name="addContactButtonLabel">Додати</string>
	<string name="searchContactButtonLabel">Пошук</string>
	<string name="showInvisible">Показати приховані</string>
	<string name="SearchText">Текст для пошуку</string>
	<string name="ChoosePhone">Виберіть номер</string>

	<string name="ExportButtonLabel">Надіслати звіт</string>

	<string-array name="ClientSortModes">
		<item>@string/ecl_addr</item>
		<item>@string/ecl_name</item>
	</string-array>

	<string-array name="OrderSortModes">
		<item>@string/eor_ordertimestamp</item>
		<item>@string/eor_addr</item>
		<item>@string/eor_name</item>
	</string-array>

	<string-array name="FuelSortModes">
		<item>@string/efu_starttimestamp</item>
		<item>@string/efu_car</item>
		<item>@string/efu_driver</item>
	</string-array>

	<string-array name="StatisticsPeriodValues">
		<item>За день</item>
		<item>За місяць</item>
		<item>За весь період</item>
		<item>Вибрати...</item>
	</string-array>

	<string-array name="UserAdminSortModes">
		<item>@string/uad_login</item>
		<item>@string/uad_contact</item>
	</string-array>

	<string-array name="StreetCategories">
		<item>вул.</item>
		<item>пров.</item>
		<item>б-р</item>
		<item>пл.</item>
		<item>пр-т</item>
		<item>набер.</item>
		<item>шосе</item>
	</string-array>

	<string-array name="BottleTypes">
		<item>мінерал</item>
		<item>осмос</item>
	</string-array>

	<string-array name="ResultTypes">
		<item>В процесі</item>
		<item>Доставлено</item>
		<item>Відмова</item>
	</string-array>

	<string-array name="AccessTypes">
		<item>Адміністратор</item>
		<item>Користувач</item>
	</string-array>

	<string name="ecl_header">Картка клієнта</string>
	<string name="ecl_name">ПІБ, Організація</string>
	<string name="ecl_cat">вулиця</string>
	<string name="ecl_addr">Адреса</string>
	<string name="ecl_house">Будинок</string>
	<string name="ecl_office">Офіс</string>
	<string name="ecl_floor">Поверх</string>
	<string name="ecl_quantity">Кількість бутилів</string>
	<string name="ecl_price">Вартість 1 бутиля</string>
	<string name="ecl_bottletype">Тип бутиля</string>
	<string name="ecl_cooler">Кулер</string>
	<string name="ecl_phone">Телефон</string>
	<string name="ecl_contact">Контактна особа</string>
	<string name="ecl_phone1">Телефон</string>
	<string name="ecl_contact1">Контактна особа</string>
	<string name="ecl_comment">Примітки</string>
	<string name="ecl_firstorderdate">Дата першого замовлення</string>
	<string name="ecl_lastorderdate">Дата останнього замовлення</string>
	<string name="ecl_type">Тип клієнта</string>
	<string name="ecl_customid">ID-клієнта</string>
	<string name="ecl_changed">Востаннє змінено:</string>
	<string name="ecl_ok">OK</string>
	<string name="ecl_cancel">Відміна</string>

	<string name="eor_header">Картка замовлення</string>
	<string name="eor_name">ПІБ, Організація</string>
	<string name="eor_cat">вулиця</string>
	<string name="eor_addr">Адреса</string>
	<string name="eor_house">Будинок</string>
	<string name="eor_office">Офіс</string>
	<string name="eor_floor">Поверх</string>
	<string name="eor_quantity">Кількість бутилів</string>
	<string name="eor_price">Вартість 1 бутиля</string>
	<string name="eor_bottletype">Тип бутиля</string>
	<string name="eor_cooler">Кулер</string>
	<string name="eor_phone">Телефон</string>
	<string name="eor_contact">Контактна особа</string>
	<string name="eor_phone1">Телефон</string>
	<string name="eor_contact1">Контактна особа</string>
	<string name="eor_comment">Примітки</string>
	<string name="eor_ordertimestamp">Бажана дата доставки</string>
	<string name="eor_result">Результат</string>
	<string name="eor_completetimestamp">Дата виконання замовлення</string>
	<string name="eor_type">Тип клієнта</string>
	<string name="eor_customid">ID-клієнта</string>
	<string name="eor_changed">Востаннє змінено:</string>
	<string name="eor_ok">OK</string>
	<string name="eor_cancel">Відміна</string>

	<string name="efu_header">Картка витрати палива</string>
	<string name="efu_car">Автомобіль</string>
	<string name="efu_driver">ПІБ водія</string>
	<string name="efu_starttimestamp">Дата/час виходу на маршрут</string>
	<string name="efu_odometerstart">Початковий показник одометра</string>
	<string name="efu_finishtimestamp">Дата/час завершення маршруту</string>
	<string name="efu_odometerend">Кінцевий показник одометра</string>
	<string name="efu_fuelstart">Початковий показник палива</string>
	<string name="efu_fueladd">Заправлено палива</string>
	<string name="efu_price">Вартість заправленого палива</string>
	<string name="efu_changed">Востаннє змінено:</string>
	<string name="efu_ok">OK</string>
	<string name="efu_cancel">Відміна</string>
	<string name="efu_firstorderdate">Дата першого замовлення</string>
	<string name="efu_lastorderdate">Дата останнього замовлення</string>

	<string name="uad_header">Користувач</string>
	<string name="uad_login">Логін</string>
	<string name="uad_contact">ПІБ</string>
	<string name="uad_phone">Телефон</string>
	<string name="uad_access">Доступ</string>
	<string name="uad_password">Пароль</string>
	<string name="uad_changed">Остання зміна</string>
	<string name="uad_ok">OK</string>
	<string name="uad_cancel">Відміна</string>

</resources>
