<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
	<TextView
		android:id="@+id/tvAuthDialogHeader"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="false"
		android:text="@string/auth_dialog"
		android:textSize="26dp" />
	<EditText
		android:id="@+id/username"
		android:inputType="textEmailAddress"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:layout_marginLeft="4dp"
		android:layout_marginRight="4dp"
		android:layout_marginBottom="4dp"
		android:hint="@string/username" />
	<EditText
		android:id="@+id/password"
		android:inputType="textPassword"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="4dp"
		android:layout_marginLeft="4dp"
		android:layout_marginRight="4dp"
		android:layout_marginBottom="16dp"
		android:fontFamily="sans-serif"
		android:hint="@string/password"/>
</LinearLayout>
